# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
src/: asteroid.py  collide.py  data.csv  events.py  game.py  laser.py  level.py  repository.py  save.py  spaceship.py  start.py  ui.py
src/assets/: Ship_4.png:Zone.Identifier  laser.png:Zone.Identifier
src/tests/: asteroid_test.py  collide_test.py  events_test.py  game_test.py  laser_test.py  level_test.py  repository_test.py  spaceship_test.py  ui_test.py
